--- a/stepmania/src/Makefile.am
+++ b/stepmania/src/Makefile.am
@@ -15,26 +15,6 @@ AM_CXXFLAGS += -finline-limit=300
 
 AM_CXXFLAGS += $(X_CFLAGS)
 
-if NHAVE_SDL
-# We use our own copy of SDL if the one on the system isn't new enough.  (Most
-# systems have 1.2.5; we need 1.2.6.)  We still end up linking dynamically to
-# the shared system library through SDL_image, but that shouldn't cause problems.
-
-SDL-1.2.6/Makefile:
-	test -d SDL-1.2.6 || mkdir SDL-1.2.6
-	cd SDL-1.2.6 && sh ../$(srcdir)/SDL-1.2.6/configure
-		--disable-nasm --disable-arts --disable-esd --enable-static --disable-shared \
-		--disable-debug --disable-alsa --disable-oss --disable-video-directfb
-
-SDL-1.2.6/src/.libs/libSDL.a: SDL-1.2.6/Makefile
-	make -C SDL-1.2.6
-
-USE_SDL_LIBS = SDL-1.2.6/src/.libs/libSDL.a
-AM_CXXFLAGS += -ISDL-1.2.6/include
-else
-USE_SDL_LIBS = $(SDL_LIBS)
-endif
-
 $(srcdir)/libresample/libresample.a:
 	cd $(srcdir)/libresample && autoconf && sh ./configure && make
 
@@ -83,15 +63,15 @@ SongOptions.cpp SongOptions.h StageStats.cpp StageStats.h Steps.cpp Steps.h Styl
 StyleInput.h TimeConstants.cpp TimeConstants.h TimingData.cpp TimingData.h TitleSubstitution.cpp TitleSubstitution.h
 
 FileTypes = IniFile.cpp IniFile.h \
-			MsdFile.cpp MsdFile.h \
-			XmlFile.cpp XmlFile.h
+		MsdFile.cpp MsdFile.h \
+		XmlFile.cpp XmlFile.h
 
 StepMania = StdString.h \
-			StepMania.cpp StepMania.h \
-			global.cpp global.h
+		StepMania.cpp StepMania.h \
+		global.cpp global.h
 
 LoadingWindow = arch/LoadingWindow/LoadingWindow_Null.h \
-				arch/LoadingWindow/LoadingWindow_SDL.cpp arch/LoadingWindow/LoadingWindow_SDL.h
+		arch/LoadingWindow/LoadingWindow_SDL.cpp arch/LoadingWindow/LoadingWindow_SDL.h
 
 if HAVE_GTK
 LoadingWindow += arch/LoadingWindow/LoadingWindow_Gtk.cpp arch/LoadingWindow/LoadingWindow_Gtk.h
@@ -106,11 +86,10 @@ Sound += arch/Sound/RageSoundDriver_OSS.cpp arch/Sound/RageSoundDriver_OSS.h
 endif
 
 if HAVE_ALSA
-Sound += arch/Sound/ALSA9Dynamic.cpp arch/Sound/ALSA9Dynamic.h \
-		 ALSA9Functions.h \
-	 	 arch/Sound/ALSA9Helpers.cpp arch/Sound/ALSA9Helpers.h \
-		 arch/Sound/RageSoundDriver_ALSA9.cpp arch/Sound/RageSoundDriver_ALSA9.h \
-		 arch/Sound/RageSoundDriver_ALSA9_Software.cpp arch/Sound/RageSoundDriver_ALSA9_Software.h
+Sound += arch/Sound/ALSA9Dynamic.cpp arch/Sound/ALSA9Dynamic.h arch/Sound/ALSA9Functions.h \
+	 arch/Sound/ALSA9Helpers.cpp arch/Sound/ALSA9Helpers.h \
+	 arch/Sound/RageSoundDriver_ALSA9.cpp arch/Sound/RageSoundDriver_ALSA9.h \
+	 arch/Sound/RageSoundDriver_ALSA9_Software.cpp arch/Sound/RageSoundDriver_ALSA9_Software.h
 
 # Add this to AM_CXXFLAGS, not stepmania_CXXFLAGS: that'll cause multiple copies of
 # several sources to be built. We link to this at runtime, so don't add ALSA_LDFLAGS.
@@ -118,61 +97,51 @@ AM_CXXFLAGS += $(ALSA_CFLAGS)
 endif
 
 ArchHooks = arch/ArchHooks/ArchHooks.cpp arch/ArchHooks/ArchHooks.h \
-			arch/ArchHooks/ArchHooks_Unix.cpp arch/ArchHooks/ArchHooks_Unix.h
+		arch/ArchHooks/ArchHooks_Unix.cpp arch/ArchHooks/ArchHooks_Unix.h
 
 InputHandler = arch/InputHandler/InputHandler.cpp arch/InputHandler/InputHandler.h \
-			   arch/InputHandler/InputHandler_SDL.cpp arch/InputHandler/InputHandler_SDL.h
+		arch/InputHandler/InputHandler_SDL.cpp arch/InputHandler/InputHandler_SDL.h
 
 MovieTexture = arch/MovieTexture/MovieTexture.cpp arch/MovieTexture/MovieTexture.h \
-			   arch/MovieTexture/MovieTexture_Null.cpp arch/MovieTexture/MovieTexture_Null.h
+		arch/MovieTexture/MovieTexture_Null.cpp arch/MovieTexture/MovieTexture_Null.h
 
 if HAVE_FFMPEG
 MovieTexture += arch/MovieTexture/MovieTexture_FFMpeg.cpp arch/MovieTexture/MovieTexture_FFMpeg.h
 endif
 
 Lights = arch/Lights/LightsDriver.h \
-		 arch/Lights/LightsDriver_SystemMessage.cpp arch/Lights/LightsDriver_SystemMessage.h
+		arch/Lights/LightsDriver_SystemMessage.cpp arch/Lights/LightsDriver_SystemMessage.h
 
 MemoryCard = arch/MemoryCard/MemoryCardDriver.h \
-			 arch/MemoryCard/MemoryCardDriver_Linux.cpp arch/MemoryCard/MemoryCardDriver_Linux.h 
+		arch/MemoryCard/MemoryCardDriver_Linux.cpp arch/MemoryCard/MemoryCardDriver_Linux.h 
 
 LowLevelWindow = arch/LowLevelWindow/LowLevelWindow.h \
-				 arch/LowLevelWindow/LowLevelWindow_SDL.cpp arch/LowLevelWindow/LowLevelWindow_SDL.h
+		arch/LowLevelWindow/LowLevelWindow_SDL.cpp arch/LowLevelWindow/LowLevelWindow_SDL.h
 
 ArchUtils = archutils/Unix/AssertionHandler.cpp \
-			archutils/Unix/GetSysInfo.cpp archutils/Unix/GetSysInfo.h \
-			archutils/Unix/SignalHandler.cpp archutils/Unix/SignalHandler.h
+		archutils/Unix/GetSysInfo.cpp archutils/Unix/GetSysInfo.h \
+		archutils/Unix/SignalHandler.cpp archutils/Unix/SignalHandler.h
 
 if USE_CRASH_HANDLER
 ArchUtils += archutils/Unix/Backtrace.cpp archutils/Unix/Backtrace.h \
-			 archutils/Unix/BacktraceNames.cpp archutils/Unix/BacktraceNames.h \
-			 archutils/Unix/CrashHandler.cpp archutils/Unix/CrashHandler.h \
-			 archutils/Unix/CrashHandlerChild.cpp archutils/Unix/CrashHandlerInternal.h \
-			 archutils/Unix/LinuxThreadHelpers.cpp archutils/Unix/LinuxThreadHelpers.h
+		archutils/Unix/BacktraceNames.cpp archutils/Unix/BacktraceNames.h \
+		archutils/Unix/CrashHandler.cpp archutils/Unix/CrashHandler.h \
+		archutils/Unix/CrashHandlerChild.cpp archutils/Unix/CrashHandlerInternal.h \
+		archutils/Unix/LinuxThreadHelpers.cpp archutils/Unix/LinuxThreadHelpers.h
 endif
 
-Arch = $(LoadingWindow) \
-	   $(Sound) \
-	   $(ArchHooks) \
-	   $(InputHandler) \
-	   $(MovieTexture) \
-	   $(Lights) \
-	   $(MemoryCard) \
-	   $(LowLevelWindow) \
-	   $(ArchUtils) \
-       arch/arch.cpp arch/arch.h \
-	   arch/arch_default.h \
-	   arch/arch_linux.h \
-	   arch/arch_platform.h
+Arch = $(LoadingWindow) $(Sound) $(ArchHooks) $(InputHandler) $(MovieTexture) \
+	   $(Lights) $(MemoryCard) $(LowLevelWindow) $(ArchUtils) \
+	   arch/arch.cpp arch/arch.h arch/arch_default.h arch/arch_linux.h arch/arch_platform.h
 
 RageSoundFileReaders = RageSoundReader_WAV.cpp RageSoundReader_WAV.h 
 
-if HAVE_MP3
-RageSoundFileReaders += RageSoundReader_MP3.cpp RageSoundReader_MP3.h
-endif
-
 if HAVE_VORBIS
 RageSoundFileReaders += RageSoundReader_Vorbisfile.cpp RageSoundReader_Vorbisfile.h
+endif
+
+if HAVE_MP3
+RageSoundFileReaders += RageSoundReader_MP3.cpp RageSoundReader_MP3.h
 endif
 
 ActorsInGameplayAndMenus = \
@@ -210,23 +179,18 @@ ScoreDisplayNormal.cpp ScoreDisplayNormal.h ScoreDisplayOni.cpp ScoreDisplayOni.
 ScoreDisplayPercentage.cpp ScoreDisplayPercentage.h ScoreDisplayRave.cpp ScoreDisplayRave.h
 
 Helpers = SDL_SaveJPEG.cpp SDL_SaveJPEG.h \
-		  SDL_dither.cpp SDL_dither.h \
-		  SDL_rotozoom.cpp SDL_rotozoom.h \
-		  SDL_utils.cpp SDL_utils.h
+	  SDL_dither.cpp SDL_dither.h \
+	  SDL_rotozoom.cpp SDL_rotozoom.h \
+	  SDL_utils.cpp SDL_utils.h
 
-PCRE = pcre/chartables.c \
-	   pcre/get.c \
-	   pcre/internal.h \
-	   pcre/maketables.c \
-	   pcre/pcre.c pcre/pcre.h \
-	   pcre/study.c
+PCRE = pcre/chartables.c pcre/get.c pcre/internal.h pcre/maketables.c pcre/pcre.c pcre/pcre.h pcre/study.c
 
 RageFile = \
 RageFile.cpp RageFile.h RageFileDriver.cpp RageFileDriver.h RageFileManager.cpp RageFileManager.h \
 RageFileDriverDirect.cpp RageFileDriverDirect.h RageFileDriverDirectHelpers.cpp RageFileDriverDirectHelpers.h \
 RageFileDriverZip.cpp RageFileDriverZip.h
 
-Rage = $(Helpers) $(PCRE) $(RageFile) $(RageSoundFileReaders)\
+Rage = $(Helpers) $(PCRE) $(RageFile) $(RageSoundFileReaders) \
 RageBitmapTexture.cpp RageBitmapTexture.h RageDisplay.cpp RageDisplay.h RageDisplay_OGL.cpp RageDisplay_OGL.h \
 RageDisplay_Null.cpp RageDisplay_Null.h RageException.cpp RageException.h RageInput.cpp RageInput.h \
 RageInputDevice.cpp RageInputDevice.h RageLog.cpp RageLog.h RageMath.cpp RageMath.h \
@@ -261,22 +225,22 @@ crypto/CryptRand.cpp crypto/CryptRand.h crypto/CryptSH512.cpp crypto/CryptSH512.
 crypto/CryptSHA.cpp crypto/CryptSHA.h
 
 main_SOURCES = $(Screens) \
-			   $(DataStructures) \
-			   $(FileTypes) \
-			   $(StepMania) \
-			   $(Arch) \
-			   $(ActorsInGameplayAndMenus) \
-			   $(ActorsInMenus) \
-			   $(ActorsInGameplay) \
-			   $(Rage) \
-			   $(Actors) \
-			   $(GlobalSingletons) \
-			   $(crypto)
+		$(DataStructures) \
+		$(FileTypes) \
+		$(StepMania) \
+		$(Arch) \
+		$(ActorsInGameplayAndMenus) \
+		$(ActorsInMenus) \
+		$(ActorsInGameplay) \
+		$(Rage) \
+		$(Actors) \
+		$(GlobalSingletons) \
+		$(crypto)
 
 main_LDADD = \
 		  $(AUDIO_LIBS) \
 		  $(LUA_LIBS) \
-		  $(USE_SDL_LIBS) \
+		  $(SDL_LIBS) \
 		  $(XLIBS) \
 		  -lSDL_image \
 		  $(srcdir)/libresample/libresample.a
@@ -328,7 +292,7 @@ test_audio_readers_SOURCES = \
 
 test_audio_readers_LDADD = \
 		$(AUDIO_LIBS) \
-		$(USE_SDL_LIBS) \
+		$(SDL_LIBS) \
 		$(srcdir)/libresample/libresample.a
 
 test_file_readers_SOURCES = \
