--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -766,6 +766,7 @@ NextOptionsScreenEndless=ScreenPlayerOptions
 NextOptionsScreenBattle=ScreenPlayerOptions
 NextOptionsScreenRave=ScreenRaveOptions
 DoRouletteOnMenuTimer=1
+AlignMusicBeat=0
 
 [ScreenEz2SelectMusic]
 UseModeSwitcher=0
