--- a/stepmania/src/StepMania.vcproj
+++ b/stepmania/src/StepMania.vcproj
@@ -579,6 +579,12 @@ cl /Zl /nologo /c verstub.cpp /Fo&quot;$(IntDir)&quot;\
 				RelativePath="Course.h">
 			</File>
 			<File
+				RelativePath="EnumHelper.cpp">
+			</File>
+			<File
+				RelativePath="EnumHelper.h">
+			</File>
+			<File
 				RelativePath=".\Font.cpp">
 			</File>
 			<File
