add metric to control difficulties that show in demonstration

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -3667,6 +3667,7 @@ NumMisses=6
 [ScreenDemonstration]
 SecondsToShow=30
 NextScreen=ScreenRanking
+DifficultiesToShow=easy,medium
 
 [ScreenNameEntry]
 TimerX=320
