metric to specify what brightness to fade the background from

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -906,6 +906,12 @@ NextScreenOni=ScreenEvaluationOni
 NextScreenEndless=ScreenEvaluationEndless
 NextScreenBattle=ScreenEvaluationBattle
 NextScreenRave=ScreenEvaluationRave
+InitialBackgroundBrightnessArcade=1
+InitialBackgroundBrightnessNonstop=1
+InitialBackgroundBrightnessOni=1
+InitialBackgroundBrightnessEndless=1
+InitialBackgroundBrightnessBattle=1
+InitialBackgroundBrightnessRave=1
 BPMDisplayX=999 // don't show by default
 BPMDisplayY=999
 BPMDisplayOnCommand=zoom,0
