--- a/stepmania/PBProject/scripts/installer.config
+++ b/stepmania/PBProject/scripts/installer.config
@@ -90,18 +90,12 @@ FILE:Visualizations/instructions.txt:OVERWRITE
 FILE:Data/Translation.dat:OVERWRITE
 FILE:Data/AI.ini:OVERWRITE
 FILE:Data/Unlocks.dat:OVERWRITE
-FILE:Data/splash.bmp:OVERWRITE
+FILE:Data/splash.png:OVERWRITE
 FILE:COPYING.txt:OVERWRITE
 FILE:README-FIRST.html:OVERWRITE
 FILE:NEWS:OVERWRITE
 FILE:StepMania.app:OVERWRITE
 
-#This file is needed for backtraces. Don't overwrite though.
-AUTH:DID_AUTH
-IF:$DID_AUTH::END
-PRIVILEGED:TRUE
-FILE:/usr/bin/atos:
-PRIVILEGED:
 #This needs to be at the very end of the file barring comments
 LABEL:END
 
