--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -3928,6 +3928,7 @@ CancelAllP2OnCommand=
 CancelAllP2ShowCommand=
 
 [ScreenRaveOptions]
+Class=ScreenOptionsMaster
 PrevScreen=ScreenSelectMusic
 NextScreen=ScreenStage
 TimerSeconds=30
