--- a/stepmania/src/StepMania.vcproj
+++ b/stepmania/src/StepMania.vcproj
@@ -1777,6 +1777,12 @@ cl /Zl /nologo /c verstub.cpp /Fo&quot;$(IntDir)&quot;\
 				RelativePath="RageSoundManager.h">
 			</File>
 			<File
+				RelativePath="RageSoundPosMap.cpp">
+			</File>
+			<File
+				RelativePath="RageSoundPosMap.h">
+			</File>
+			<File
 				RelativePath="RageSoundReader.h">
 			</File>
 			<File
