--- a/stepmania/PBProject/Info-StepMania.plist
+++ b/stepmania/PBProject/Info-StepMania.plist
@@ -4,29 +4,44 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
+    
 	<key>CFBundleExecutable</key>
 	<string>StepMania</string>
-	<key>CFBundleGetInfoString</key>
-	<string>StepMania 3.9 alpha 15</string>
+    
 	<key>CFBundleIconFile</key>
 	<string>smicon.icns</string>
+    
 	<key>CFBundleIdentifier</key>
 	<string>StepMania</string>
+    
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
+    
 	<key>CFBundleName</key>
 	<string>StepMania</string>
+    
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
-	<key>CFBundleShortVersionString</key>
-	<string>3.9 alpha 15</string>
+    
 	<key>CFBundleSignature</key>
 	<string>Step</string>
-	<key>CFBundleVersion</key>
-	<string>3.9 alpha 15</string>
-	<key>NSPrincipalClass</key>
+    
+    <key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+    
     <key>LSMinimumSystemVersion</key>
     <string>10.2.7</string>
+    
+	<key>CFBundleGetInfoString</key>
+	<string>StepMania 3.9 alpha 17</string>
+    
+	<key>CFBundleShortVersionString</key>
+	<string>3.9 alpha 17</string>
+    
+	<key>CFBundleVersion</key>
+	<string>3.9a17</string>
+    
+    <key>NSHumanReadableCopyright</key>
+    <string>Copyright 2003, 2004</string>
 </dict>
 </plist>
