simplify branching metrics for ScreenSelectMusic

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -747,26 +747,19 @@ TimerSeconds=60
 StyleIcon=1
 MemoryCardIcons=1
 SampleMusicDelay=0.25
-PrevScreenArcade=ScreenTitleMenu
-PrevScreenNonstop=ScreenTitleMenu
-PrevScreenOni=ScreenTitleMenu
-PrevScreenEndless=ScreenTitleMenu
-PrevScreenBattle=ScreenTitleMenu
-PrevScreenRave=ScreenTitleMenu
-NextScreenArcade=ScreenStage
-NextScreenNonstop=ScreenStage
-NextScreenOni=ScreenStage
-NextScreenEndless=ScreenStage
-NextScreenBattle=ScreenStage
-NextScreenRave=ScreenStage
-NextOptionsScreenArcade=ScreenPlayerOptions
-NextOptionsScreenNonstop=ScreenPlayerOptions
-NextOptionsScreenOni=ScreenPlayerOptions
-NextOptionsScreenEndless=ScreenPlayerOptions
-NextOptionsScreenBattle=ScreenPlayerOptions
-NextOptionsScreenRave=ScreenRaveOptions
+PrevScreen=ScreenTitleMenu
+NextScreen=ScreenStage
+NextOptionsScreen=ScreenBranchOptions
 DoRouletteOnMenuTimer=1
 AlignMusicBeat=0
+
+[ScreenBranchOptions]
+Class=ScreenBranch
+Choices=Rave,Normal
+ConditionRave=PlayModeName() == "rave"
+ConditionNormal=true
+NextScreenRave=screen,ScreenRaveOptions
+NextScreenNormal=screen,ScreenPlayerOptions
 
 [ScreenEz2SelectMusic]
 UseModeSwitcher=0
