move screen flow logic into branches, not PlayMode specific metrics

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -561,12 +561,7 @@ CropWidth=146
 InitCommand=horizalign,left;vertalign,top;shadowlength,2;zoom,0.5;
 
 [ScreenInstructions]
-NextScreenArcade=ScreenSelectCharacter
-NextScreenNonstop=ScreenSelectCharacter
-NextScreenOni=ScreenSelectCharacter
-NextScreenEndless=ScreenSelectCharacter
-NextScreenBattle=ScreenSelectCharacter
-NextScreenRave=ScreenSelectCharacter
+NextScreen=ScreenSelectCharacter
 TimerSeconds=15
 StyleIcon=1
 MemoryCardIcons=1
@@ -749,17 +744,9 @@ MemoryCardIcons=1
 SampleMusicDelay=0.25
 PrevScreen=ScreenTitleMenu
 NextScreen=ScreenStage
-NextOptionsScreen=ScreenBranchOptions
+NextOptionsScreen=ScreenBranchFirstOptions
 DoRouletteOnMenuTimer=1
 AlignMusicBeat=0
-
-[ScreenBranchOptions]
-Class=ScreenBranch
-Choices=Rave,Normal
-ConditionRave=PlayModeName() == "rave"
-ConditionNormal=true
-NextScreenRave=screen,ScreenRaveOptions
-NextScreenNormal=screen,ScreenPlayerOptions
 
 [ScreenEz2SelectMusic]
 UseModeSwitcher=0
@@ -812,24 +799,9 @@ DifficultyRatingY=999
 DifficultyRatingOrientation=0
 DifficultyRatingSpacing=40.0
 PreviewMusicMode=0 // 0 = play music as you select, 1 = no music plays, select once and preview music plays, select again for confirm, 2 = no music plays at all, 3 = play music as select, press twice to confirm, 4 = static menu music plays, no confirm
-PrevScreenArcade=ScreenTitleMenu
-PrevScreenNonstop=ScreenTitleMenu
-PrevScreenOni=ScreenTitleMenu
-PrevScreenEndless=ScreenTitleMenu
-PrevScreenBattle=ScreenTitleMenu
-PrevScreenRave=ScreenTitleMenu
-NextScreenArcade=ScreenStage
-NextScreenNonstop=ScreenStage
-NextScreenOni=ScreenStage
-NextScreenEndless=ScreenStage
-NextScreenBattle=ScreenStage
-NextScreenRave=ScreenStage
-NextOptionsScreenArcade=ScreenPlayerOptions
-NextOptionsScreenNonstop=ScreenPlayerOptions
-NextOptionsScreenOni=ScreenPlayerOptions
-NextOptionsScreenEndless=ScreenPlayerOptions
-NextOptionsScreenBattle=ScreenPlayerOptions
-NextOptionsScreenRave=ScreenRaveOptions
+PrevScreen=ScreenTitleMenu
+NextScreen=ScreenStage
+NextOptionsScreen=ScreenBranchFirstOptions
 TimerSeconds=60
 StyleIcon=0
 MemoryCardIcons=0
@@ -887,18 +859,8 @@ BannerOffCommand=hidden,1
 ShowEvaluationOnFail=0
 StaticBGY=240
 StaticBGX=320
-PrevScreenArcade=ScreenSelectMusic
-PrevScreenNonstop=ScreenSelectCourse
-PrevScreenOni=ScreenSelectCourse
-PrevScreenEndless=ScreenSelectCourse
-PrevScreenBattle=ScreenSelectMusic
-PrevScreenRave=ScreenSelectMusic
-NextScreenArcade=ScreenEvaluationStage
-NextScreenNonstop=ScreenEvaluationNonstop
-NextScreenOni=ScreenEvaluationOni
-NextScreenEndless=ScreenEvaluationEndless
-NextScreenBattle=ScreenEvaluationBattle
-NextScreenRave=ScreenEvaluationRave
+PrevScreen=ScreenBranchSelectSongOrCourse
+NextScreen=ScreenBranchEvaluation
 InitialBackgroundBrightnessArcade=1
 InitialBackgroundBrightnessNonstop=1
 InitialBackgroundBrightnessOni=1
@@ -1124,6 +1086,22 @@ SongPositionMeterX=
 SongPositionMeterY=
 SongPositionMeterOnCommand=hidden,1
 SongPositionMeterOffCommand=
+
+[ScreenBranchEvaluation]
+Class=ScreenBranch
+Choices=1,2,3,4,5,6
+Condition1=PlayModeName() == "Arcade"
+Condition2=PlayModeName() == "Nonstop"
+Condition3=PlayModeName() == "Oni"
+Condition4=PlayModeName() == "Endless"
+Condition5=PlayModeName() == "Rave"
+Condition6=PlayModeName() == "Battle"
+NextScreen1=screen,ScreenEvaluationStage
+NextScreen2=screen,ScreenEvaluationNonstop
+NextScreen3=screen,ScreenEvaluationOni
+NextScreen4=screen,ScreenEvaluationEndless
+NextScreen5=screen,ScreenEvaluationRave
+NextScreen6=screen,ScreenEvaluationBattle
 
 [ScreenEvaluation]
 Class=ScreenEvaluation
@@ -3871,26 +3849,23 @@ LineNames=1
 OptionMenuFlags=together
 Line1=conf,Game
 
-[ScreenPlayerOptions]
+[ScreenBranchSelectSongOrCourse]
+Class=ScreenBranch
+Choices=1,2
+Condition1=IsCourseMode()
+Condition2=true
+NextScreen1=screen,ScreenSelectCourse
+NextScreen2=screen,ScreenSelectMusic
 
-PrevScreenArcade=ScreenSelectMusic
-PrevScreenNonstop=ScreenSelectCourse
-PrevScreenOni=ScreenSelectCourse
-PrevScreenEndless=ScreenSelectCourse
-PrevScreenBattle=ScreenSelectMusic
-PrevScreenRave=ScreenSelectMusic
-NextScreenArcade=ScreenSongOptions
-NextScreenNonstop=ScreenSongOptions
-NextScreenOni=ScreenSongOptions
-NextScreenEndless=ScreenSongOptions
-NextScreenBattle=ScreenSongOptions
-NextScreenRave=ScreenSongOptions
+[ScreenPlayerOptions]
+PrevScreen=ScreenBranchSelectSongOrCourse
+NextScreen=ScreenSongOptions
 TimerSeconds=30
 StyleIcon=0
 MemoryCardIcons=0
 
-PrevScreen=
-NextScreen=
+PrevScreen=ScreenBranchSelectSongOrCourse
+NextScreen=ScreenSongOptions
 
 LineNames=1,2,3,4,5,6,7,8,9,10,11,12,13,14,15
 OptionMenuFlags=
@@ -3937,26 +3912,24 @@ Line3=list,NoteSkins
 Line4=list,Persp
 Line5=Steps
 
+[ScreenBranchFirstOptions]
+Class=ScreenBranch
+Choices=1,2
+Condition1=PlayModeName() == "Rave"
+Condition2=true
+NextScreen1=screen,ScreenRaveOptions
+NextScreen2=screen,ScreenPlayerOptions
+
 [ScreenSongOptions]
-PrevScreenArcade=ScreenPlayerOptions
-PrevScreenNonstop=ScreenPlayerOptions
-PrevScreenOni=ScreenPlayerOptions
-PrevScreenEndless=ScreenPlayerOptions
-PrevScreenBattle=ScreenPlayerOptions
-PrevScreenRave=ScreenRaveOptions
-NextScreenArcade=ScreenStage
-NextScreenNonstop=ScreenStage
-NextScreenOni=ScreenStage
-NextScreenEndless=ScreenStage
-NextScreenBattle=ScreenStage
-NextScreenRave=ScreenStage
+PrevScreen=ScreenBranchFirstOptions
+NextScreen=ScreenStage
 Game=Change the current game type with this option.
 TimerSeconds=30
 StyleIcon=0
 MemoryCardIcons=0
 
-PrevScreen=ScreenOptionsMenu
-NextScreen=ScreenOptionsMenu
+PrevScreen=ScreenBranchFirstOptions
+NextScreen=ScreenStage
 
 LineNames=1,2,3,4,5,6,7,8
 OptionMenuFlags=
@@ -4037,18 +4010,8 @@ SleepAfterTweenOffSeconds=0.8
 TimerSeconds=40
 StyleIcon=1
 MemoryCardIcons=1
-PrevScreenArcade=ScreenTitleMenu
-PrevScreenNonstop=ScreenTitleMenu
-PrevScreenOni=ScreenTitleMenu
-PrevScreenEndless=ScreenTitleMenu
-PrevScreenBattle=ScreenTitleMenu
-PrevScreenRave=ScreenTitleMenu
-NextScreenArcade=ScreenSelectMusic
-NextScreenNonstop=ScreenSelectCourse
-NextScreenOni=ScreenSelectCourse
-NextScreenEndless=ScreenSelectCourse
-NextScreenBattle=ScreenSelectMusic
-NextScreenRave=ScreenSelectMusic
+PrevScreen=ScreenTitleMenu
+NextScreen=ScreenBranchSelectSongOrCourse
 
 [BeginnerHelper]
 # All X,Y coordinates are relative to the HelperX,Y
