--- a/stepmania/src/StepMania.vcproj
+++ b/stepmania/src/StepMania.vcproj
@@ -573,6 +573,12 @@ cl /Zl /nologo /c verstub.cpp /Fo&quot;$(IntDir)&quot;\
 				RelativePath="Course.h">
 			</File>
 			<File
+				RelativePath="CourseUtil.cpp">
+			</File>
+			<File
+				RelativePath="CourseUtil.h">
+			</File>
+			<File
 				RelativePath="EnumHelper.cpp">
 			</File>
 			<File
