--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -14,6 +14,7 @@
 [Common]
 ColorP1=0.4,1.0,0.8,1		// sea green
 ColorP2=1.0,0.5,0.2,1		// orange
+FirstRunInitialScreen=ScreenCompany
 InitialScreen=ScreenCompany
 WindowTitle=StepMania
 DefaultModifiers=
