on/off commands for overlay

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -733,6 +733,8 @@ CourseHasModsOnCommand=
 OptionsMessageX=320
 OptionsMessageY=240
 OptionsMessageOnCommand=zoomy,0;linear,0.25;zoomy,1;sleep,1;linear,0.25;zoomy,0
+OverlayOnCommand=
+OverlayOffCommand=
 CourseContentsX=160
 CourseContentsY=336
 CourseContentsOnCommand=
