theme RadarCategory and PlayMode in profile.html

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -4308,3 +4308,21 @@ TimerSeconds=0
 [Banner]
 ScrollRandom=1
 ScrollRoulette=1
+
+[ProfileHtml]
+ShowPlayModeArcade=1
+ShowPlayModeNonstop=1
+ShowPlayModeOni=1
+ShowPlayModeEndless=1
+ShowPlayModeBattle=1
+ShowPlayModeRave=1
+ShowRadarRadarCategoryStream=1
+ShowRadarRadarCategoryVoltage=1
+ShowRadarRadarCategoryAir=1
+ShowRadarRadarCategoryFreeze=1
+ShowRadarRadarCategoryChaos=1
+ShowRadarRadarCategoryTaps=1
+ShowRadarRadarCategoryJumps=1
+ShowRadarRadarCategoryHolds=1
+ShowRadarRadarCategoryMines=1
+ShowRadarRadarCategoryHands=1
