--- a/stepmania/src/StepMania.vcproj
+++ b/stepmania/src/StepMania.vcproj
@@ -1160,6 +1160,12 @@ cl /Zl /nologo /c verstub.cpp /Fo&quot;$(IntDir)&quot;\
 					RelativePath="archutils\Win32\GotoURL.h">
 				</File>
 				<File
+					RelativePath="archutils\Win32\RegistryAccess.cpp">
+				</File>
+				<File
+					RelativePath="archutils\Win32\RegistryAccess.h">
+				</File>
+				<File
 					RelativePath="archutils\Win32\RestartProgram.cpp">
 				</File>
 				<File
