fix remainder tween off

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -3183,11 +3183,11 @@ PercentP2OffCommand=
 PercentRemainderP1X=0
 PercentRemainderP1Y=0
 PercentRemainderP1OnCommand=horizalign,left;vertalign,bottom;zoom,0.5;glowshift;effectperiod,2;shadowlength,0
-PercentRemainderP1OffCommand=sleep,0.8;accelerate,0.3;addx,-320
+PercentRemainderP1OffCommand=
 PercentRemainderP2X=0
 PercentRemainderP2Y=0
 PercentRemainderP2OnCommand=horizalign,left;vertalign,bottom;zoom,0.5;glowshift;effectperiod,2;shadowlength,0
-PercentRemainderP2OffCommand=sleep,0.8;accelerate,0.3
+PercentRemainderP2OffCommand=
 DancePointsP1X=-26
 DancePointsP1Y=-32
 DancePointsP1OnCommand=glowshift;effectperiod,2;shadowlength,0
