fix missing metrics

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -4316,13 +4316,13 @@ ShowPlayModeOni=1
 ShowPlayModeEndless=1
 ShowPlayModeBattle=1
 ShowPlayModeRave=1
-ShowRadarRadarCategoryStream=1
-ShowRadarRadarCategoryVoltage=1
-ShowRadarRadarCategoryAir=1
-ShowRadarRadarCategoryFreeze=1
-ShowRadarRadarCategoryChaos=1
-ShowRadarRadarCategoryTaps=1
-ShowRadarRadarCategoryJumps=1
-ShowRadarRadarCategoryHolds=1
-ShowRadarRadarCategoryMines=1
-ShowRadarRadarCategoryHands=1
+ShowRadarCategoryStream=1
+ShowRadarCategoryVoltage=1
+ShowRadarCategoryAir=1
+ShowRadarCategoryFreeze=1
+ShowRadarCategoryChaos=1
+ShowRadarCategoryTaps=1
+ShowRadarCategoryJumps=1
+ShowRadarCategoryHolds=1
+ShowRadarCategoryMines=1
+ShowRadarCategoryHands=1
