ScreenStage metric update

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -857,6 +857,10 @@ BannerY=999
 BannerX=999
 BannerOnCommand=hidden,1
 BannerOffCommand=hidden,1
+BackgroundOnCommand=
+BackgroundOffCommand=
+OverlayOnCommand=
+OverlayOffCommand=
 
 [ScreenGameplay]
 ShowEvaluationOnFail=0
