ScreenStage metric update

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -837,6 +837,7 @@ MemoryCardIcons=1
 
 [ScreenStage]
 NextScreen=ScreenGameplay
+MinimumDelay=3
 CharacterIconP1X=999
 CharacterIconP2X=999
 CharacterIconP1Y=999
