--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -837,6 +837,9 @@ MemoryCardIcons=1
 
 [ScreenStage]
 NextScreen=ScreenGameplay
+// This is the minimum delay after the "in" transition before the
+// "out" transition will begin.  (NextScreen is loaded during this
+// time.)
 MinimumDelay=3
 CharacterIconP1X=999
 CharacterIconP2X=999
