move Random "don't lock after choose" logic to a separate wheel item, "LEAP"

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -2732,6 +2732,7 @@ SongRealExtraColor=0.9,0.9,0,1		// yellow
 SortMenuColor=1,1,0,1
 ShowRoulette=1
 ShowRandom=1
+ShowLeap=0
 Use3D=0
 Wheel3DRadius=200 # Possibly safe defaults?
 CirclePercent=0.5
