move MenuElements into a base ScreenWithMenuElements so that metrics can be overridden using the Fallback mechanism

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -39,6 +39,7 @@ CurrentModeZoom=1
 # Note that we don't use the "name" parameter to Choices here.  Name1 is
 # the displayed text, which might be translated or otherwise changed.  The "name,foo"
 # parameter to ModeChoices is an asset name, which is used in filenames.
+Fallback=ScreenWithMenuElements
 ChoiceNames=1,2,3,4,5,6,7
 //,8
 Choice1=screen,ScreenCaution
@@ -104,6 +105,7 @@ BounceJoinMessage=1
 FoldOnJoin=1
 
 [ScreenSelectStyle]
+Fallback=ScreenWithMenuElements
 ChoiceNames=1,2,3,4,5
 # The "name" here affects the announcer, eg. "ScreenSelectStyle comment single".
 Choice1=Style,single;name,single
@@ -264,6 +266,7 @@ MemoryCardIcons=0
 TimerSeconds=0
 
 [ScreenSelectDifficulty]
+Fallback=ScreenWithMenuElements
 ChoiceNames=1,2,3,4,5,6,7,8
 Choice1=PlayMode,arcade;Difficulty,beginner;name,beginner
 Choice2=PlayMode,arcade;Difficulty,easy;name,easy
@@ -501,6 +504,7 @@ StyleIcon=1
 MemoryCardIcons=1
 
 [ScreenSelectGroup]
+Fallback=ScreenWithMenuElements
 FrameX=180
 FrameY=160
 FrameOnCommand=addx,-400;bounceend,0.5;addx,400
@@ -562,12 +566,14 @@ CropWidth=146
 InitCommand=horizalign,left;vertalign,top;shadowlength,2;zoom,0.5;
 
 [ScreenInstructions]
+Fallback=ScreenWithMenuElements
 NextScreen=ScreenSelectCharacter
 TimerSeconds=15
 StyleIcon=1
 MemoryCardIcons=1
 
 [ScreenSelectMusic]
+Fallback=ScreenWithMenuElements
 NonPresenceP1X=-128
 NonPresenceP1Y=240
 NonPresenceP1OnCommand=x,-128;sleep,0.5;linear,1.0;x,32;sleep,999;
@@ -2779,34 +2785,34 @@ FeetPerDifficulty=0
 StopMusicOnNext=0
 KeepAliveType=0		// 0 for MAX, 1 for 5th
 
-[MenuElements]
+[ScreenWithMenuElements]
 HeaderX=320
 HeaderY=22
-HeaderOnCommand=addx,640;spring,0.5;addx,-640
+HeaderOnCommand=z,-1000;addx,640;spring,0.5;addx,-640
 HeaderOffCommand=bouncebegin,0.5;addx,640;
 FooterX=320
 FooterY=464
-FooterOnCommand=
+FooterOnCommand=z,-1000;
 FooterOffCommand=
 HelpX=320
 HelpY=456
-HelpOnCommand=zoom,0.5;zoomy,0;linear,0.5;zoomy,0.5
+HelpOnCommand=z,-1000;zoom,0.5;zoomy,0;linear,0.5;zoomy,0.5
 HelpOffCommand=linear,0.5;zoomy,0
 StyleIconX=440
 StyleIconY=26
-StyleIconOnCommand=addx,640;spring,0.5;addx,-640
+StyleIconOnCommand=z,-1000;addx,640;spring,0.5;addx,-640
 StyleIconOffCommand=bouncebegin,0.5;addx,640;
 MemoryCardDisplayP1X=460
 MemoryCardDisplayP1Y=20
-MemoryCardDisplayP1OnCommand=addx,640;spring,0.5;addx,-640
+MemoryCardDisplayP1OnCommand=z,-1000;addx,640;spring,0.5;addx,-640
 MemoryCardDisplayP1OffCommand=bouncebegin,0.5;addx,640;
 MemoryCardDisplayP2X=480
 MemoryCardDisplayP2Y=20
-MemoryCardDisplayP2OnCommand=addx,640;spring,0.5;addx,-640
+MemoryCardDisplayP2OnCommand=z,-1000;addx,640;spring,0.5;addx,-640
 MemoryCardDisplayP2OffCommand=bouncebegin,0.5;addx,640;
 TimerX=590
 TimerY=22
-TimerOnCommand=addx,640;spring,0.5;addx,-640
+TimerOnCommand=z,-1000;addx,640;spring,0.5;addx,-640
 TimerOffCommand=bouncebegin,0.5;addx,640;
 
 [MenuTimer]
@@ -2884,34 +2890,23 @@ MoreExitUnselectedP1Command=
 MoreExitUnselectedP2Command=
 
 [ScreenMapControllers]
+Fallback=ScreenOperatorMenu
 EvenLineIn=addx,-640;decelerate,0.5;addx,640;
 OddLineIn=addx,640;decelerate,0.5;addx,-640;
 EvenLineOut=stoptweening;accelerate,0.3;addx,-640;
 OddLineOut=stoptweening;accelerate,0.3;addx,640;
-StyleIcon=0
-MemoryCardIcons=0
-TimerSeconds=0
 
 [ScreenCenterImage]
-StyleIcon=0
-MemoryCardIcons=0
-TimerSeconds=0
+Fallback=ScreenOperatorMenu
 
 [ScreenTestInput]
-StyleIcon=0
-MemoryCardIcons=0
-TimerSeconds=0
+Fallback=ScreenOperatorMenu
 
 [ScreenTestLights]
-StyleIcon=0
-MemoryCardIcons=0
-TimerSeconds=0
-Fallback=ScreenTestInput
+Fallback=ScreenOperatorMenu
 
 [ScreenBookkeeping]
-StyleIcon=0
-MemoryCardIcons=0
-TimerSeconds=0
+Fallback=ScreenOperatorMenu
 
 [HoldGhostArrow]
 WarmUpSeconds=0.25
@@ -3237,6 +3232,10 @@ MemoryCardIcons=1
 
 [ScreenOptionsSubmenu]
 Class=ScreenOptionsMaster
+Fallback=ScreenOperatorMenu
+
+[ScreenOperatorMenu]
+Fallback=ScreenWithMenuElements
 StyleIcon=0
 MemoryCardIcons=0
 TimerSeconds=0
@@ -3980,6 +3979,7 @@ NextScreen=ScreenRanking
 NextScreen=ScreenCompany
 
 [ScreenSelectCharacter]
+Fallback=ScreenWithMenuElements
 TitleP1OnCommand=x,140;y,80;addx,-400;bounceend,0.5;addx,400
 TitleP1OffCommand=sleep,0.2;bouncebegin,0.5;addx,-400
 TitleP2OnCommand=x,500;y,80;addx,400;bounceend,0.5;addx,-400
