--- a/stepmania/src/StepMania.vcproj
+++ b/stepmania/src/StepMania.vcproj
@@ -538,6 +538,12 @@ cl /Zl /nologo /c verstub.cpp /Fo&quot;$(IntDir)&quot;\
 			<File
 				RelativePath="ScreenUnlock.h">
 			</File>
+			<File
+				RelativePath="ScreenWithMenuElements.cpp">
+			</File>
+			<File
+				RelativePath="ScreenWithMenuElements.h">
+			</File>
 		</Filter>
 		<Filter
 			Name="Data Structures"
@@ -1374,12 +1380,6 @@ cl /Zl /nologo /c verstub.cpp /Fo&quot;$(IntDir)&quot;\
 			</File>
 			<File
 				RelativePath="MemoryCardDisplay.h">
-			</File>
-			<File
-				RelativePath="MenuElements.cpp">
-			</File>
-			<File
-				RelativePath="MenuElements.h">
 			</File>
 			<File
 				RelativePath="MenuTimer.cpp">
