make draw order separate from Z value add "PageType" graphic to ScreenEvaluation

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -3545,6 +3545,10 @@ StepsTypeX=520
 StepsTypeY=60
 StepsTypeOnCommand=addx,640;sleep,0.0;bounceend,1;addx,-640
 StepsTypeOffCommand=sleep,0.0;linear,0.5;diffusealpha,0
+PageTypeX=520
+PageTypeY=60
+PageTypeOnCommand=addx,640;sleep,0.0;bounceend,1;addx,-640
+PageTypeOffCommand=sleep,0.0;linear,0.5;diffusealpha,0
 
 BulletStartX=100
 BulletStartY=140
