fix missing ScreenEditMenu elements

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -2645,6 +2645,7 @@ TextZoom=0.8
 NextScreen=ScreenRanking
 
 [ScreenEditMenu]
+Fallback=ScreenWithMenuElements
 ExplanationX=320
 ExplanationY=410
 StyleIcon=0
