fix missing elements

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -1121,6 +1121,7 @@ NextScreen5=screen,ScreenEvaluationRave
 NextScreen6=screen,ScreenEvaluationBattle
 
 [ScreenEvaluation]
+Fallback=ScreenWithMenuElements
 Class=ScreenEvaluation
 FailedSoundTime=0
 PassedSoundTime=0
@@ -2829,6 +2830,7 @@ WarningCommand1=stoptweening;linear,0.2;zoomx,1;sleep,0.6;linear,0.2;zoomx,0
 WarningCommand0=stoptweening;stopeffect;linear,0.2;zoomx,1
 
 [ScreenOptions]
+Fallback=ScreenWithMenuElements
 IconsP1X=40
 IconsP2X=600
 ArrowsX=88
@@ -3875,6 +3877,7 @@ NextScreen1=screen,ScreenSelectCourse
 NextScreen2=screen,ScreenSelectMusic
 
 [ScreenPlayerOptions]
+Fallback=ScreenOptions
 PrevScreen=ScreenBranchSelectSongOrCourse
 NextScreen=ScreenSongOptions
 TimerSeconds=30
@@ -3937,6 +3940,7 @@ NextScreen1=screen,ScreenRaveOptions
 NextScreen2=screen,ScreenPlayerOptions
 
 [ScreenSongOptions]
+Fallback=ScreenOptions
 PrevScreen=ScreenBranchFirstOptions
 NextScreen=ScreenStage
 Game=Change the current game type with this option.
