fix ScreenSelectMusic menuelement draw order

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -2790,31 +2790,31 @@ KeepAliveType=0		// 0 for MAX, 1 for 5th
 [ScreenWithMenuElements]
 HeaderX=320
 HeaderY=22
-HeaderOnCommand=z,-1000;addx,640;spring,0.5;addx,-640
+HeaderOnCommand=draworder,95;addx,640;spring,0.5;addx,-640
 HeaderOffCommand=bouncebegin,0.5;addx,640;
 FooterX=320
 FooterY=464
-FooterOnCommand=z,-1000;
+FooterOnCommand=draworder,95;
 FooterOffCommand=
 HelpX=320
 HelpY=456
-HelpOnCommand=z,-1000;zoom,0.5;zoomy,0;linear,0.5;zoomy,0.5
+HelpOnCommand=draworder,97;zoom,0.5;zoomy,0;linear,0.5;zoomy,0.5
 HelpOffCommand=linear,0.5;zoomy,0
 StyleIconX=440
 StyleIconY=26
-StyleIconOnCommand=z,-1000;addx,640;spring,0.5;addx,-640
+StyleIconOnCommand=draworder,97;addx,640;spring,0.5;addx,-640
 StyleIconOffCommand=bouncebegin,0.5;addx,640;
 MemoryCardDisplayP1X=460
 MemoryCardDisplayP1Y=20
-MemoryCardDisplayP1OnCommand=z,-1000;addx,640;spring,0.5;addx,-640
+MemoryCardDisplayP1OnCommand=draworder,97;addx,640;spring,0.5;addx,-640
 MemoryCardDisplayP1OffCommand=bouncebegin,0.5;addx,640;
 MemoryCardDisplayP2X=480
 MemoryCardDisplayP2Y=20
-MemoryCardDisplayP2OnCommand=z,-1000;addx,640;spring,0.5;addx,-640
+MemoryCardDisplayP2OnCommand=draworder,97;addx,640;spring,0.5;addx,-640
 MemoryCardDisplayP2OffCommand=bouncebegin,0.5;addx,640;
 TimerX=590
 TimerY=22
-TimerOnCommand=z,-1000;addx,640;spring,0.5;addx,-640
+TimerOnCommand=draworder,97;addx,640;spring,0.5;addx,-640
 TimerOffCommand=bouncebegin,0.5;addx,640;
 
 [MenuTimer]
