--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -4321,6 +4321,7 @@ NextScreen=ScreenOptionsMenu
 StyleIcon=0
 MemoryCardIcons=0
 TimerSeconds=0
+Fallback=ScreenWithMenuElements
 
 [Banner]
 ScrollRandom=1
