add missing metric

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -19,6 +19,7 @@ InitialScreen=ScreenCompany
 WindowTitle=StepMania
 DefaultModifiers=
 JoinPauseSeconds=0.8
+DifficultiesToShow=beginner,easy,medium,hard,challenge
 
 [ModeSwitcher]
 PrevModeX=-200
