--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -577,11 +577,11 @@ MemoryCardIcons=1
 Fallback=ScreenWithMenuElements
 NonPresenceP1X=-128
 NonPresenceP1Y=240
-NonPresenceP1OnCommand=x,-128;sleep,0.5;linear,1.0;x,32;sleep,999;
+NonPresenceP1OnCommand=x,-128;sleep,0.5;linear,1.0;x,32
 NonPresenceP1OffCommand=
 NonPresenceP2X=768
 NonPresenceP2Y=240
-NonPresenceP2OnCommand=x,768;sleep,0.5;linear,1.0;x,607;sleep,999;
+NonPresenceP2OnCommand=x,768;sleep,0.5;linear,1.0;x,607
 NonPresenceP2OffCommand=
 DefaultSort=GROUP
 FOV=0
