Don't fade in title menu options.  It looks strange, since we're fading from black on top of it, and the selected menu item doesn't fade in.

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -80,7 +80,7 @@ ColorSelected=0.5,1,0.5,1
 ZoomNotSelected=1.0
 ZoomSelected=1.3
 MenuTextAlign=1  // 0=left, 1=center, 2=right
-MenuCommandOnCreate=diffusealpha,0;sleep,0.1;linear,0.5;diffusealpha,1;
+MenuCommandOnCreate=
 MenuCommandSelectDelay=0.5
 SecondsBetweenComments=12
 SecondsBeforeAttract=30
