--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -569,6 +569,7 @@ InitCommand=horizalign,left;vertalign,top;shadowlength,2;zoom,0.5;
 [ScreenInstructions]
 Fallback=ScreenWithMenuElements
 NextScreen=ScreenSelectCharacter
+PrevScreen=ScreenTitleMenu
 TimerSeconds=15
 StyleIcon=1
 MemoryCardIcons=1
