fix missing elements

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -818,6 +818,7 @@ StyleIcon=0
 MemoryCardIcons=0
 
 [ScreenSelectCourse]
+Fallback=ScreenWithMenuElements
 ExplanationX=132
 ExplanationY=68
 BannerFrameX=160
