--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -819,6 +819,7 @@ MemoryCardIcons=0
 
 [ScreenSelectCourse]
 Fallback=ScreenWithMenuElements
+PrevScreen=ScreenTitleMenu
 ExplanationX=132
 ExplanationY=68
 BannerFrameX=160
