--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -123,6 +123,7 @@ NextScreen2=ScreenSelectDifficulty
 NextScreen3=ScreenSelectDifficulty
 NextScreen4=ScreenSelectDifficulty
 NextScreen5=ScreenSelectDifficulty
+PrevScreen=ScreenTitleMenu
 PremiumX=550
 PremiumY=84
 PremiumOnCommand=addx,400;bounceend,0.5;addx,-400;glowshift;effectcolor1,1,1,1,0;effectcolor2,1,1,1,0.3
@@ -290,6 +291,7 @@ NextScreen5=ScreenInstructions
 NextScreen6=ScreenInstructions
 NextScreen7=ScreenInstructions
 NextScreen8=ScreenInstructions
+PrevScreen=ScreenTitleMenu
 LockInputSeconds=0.8
 SleepAfterChoiceSeconds=0.3
 SleepAfterTweenOffSeconds=0.8
