add missing metrics.

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -3098,6 +3098,7 @@ RandomVanish=
 // with other song select.
 SaveScreenshot=MenuLeft-MenuRight-Start
 CancelAllPlayerOptions=
+BackInEventMode=
 
 [GrooveRadar]
 Label1OffsetX=0		// stream
@@ -4312,6 +4313,9 @@ ShowPlayModeOni=1
 ShowPlayModeEndless=1
 ShowPlayModeBattle=1
 ShowPlayModeRave=1
+ShowHighScoreGrade=1
+ShowHighScoreScore=1
+ShowHighScorePercent=1
 ShowRadarCategoryStream=1
 ShowRadarCategoryVoltage=1
 ShowRadarCategoryAir=1
@@ -4332,11 +4336,19 @@ ShowStyleSingle=1
 ShowStyleVersus=1
 ShowStyleDouble=1
 ShowStyleCouple=1
+ShowStyleSolo=1
+ShowStyleReal=1
+ShowStyleVersusReal=1
 ShowStyleCabinet=0
 ShowStepsTypeDance-single=1
 ShowStepsTypeDance-double=1
 ShowStepsTypeDance-couple=1
 ShowStepsTypeDance-solo=1
+ShowStepsTypePump-single=1
+ShowStepsTypePump-double=1
+ShowStepsTypePump-couple=1
+ShowStepsTypeEz2-single=1
+ShowStepsTypeEz2-real=1
 ShowStepsTypeLights-cabinet=0
 
 [Grade]
