add some missing metrics for ScreenProfileOptions. I didn't set any values for them, because I'm not quite sure what to set them to ATM and just wanted to silence the "missing metric" messages.

--- a/stepmania/Themes/default/metrics.ini
+++ b/stepmania/Themes/default/metrics.ini
@@ -3373,6 +3373,22 @@ CardDirPlayer2=
 StyleIcon=0
 MemoryCardIcons=0
 TimerSeconds=0
+HeaderY=
+HeaderX=
+HeaderOnCommand=
+HeaderOffCommand=
+TimerY=
+TimerX=
+TimerOnCommand=
+TimerOffCommand=
+FooterY=
+FooterX=
+FooterOnCommand=
+FooterOffCommand=
+HelpY=
+HelpX=
+HelpOnCommand=
+HelpOffCommand=
 
 [ScreenUnlock]
 Fallback=ScreenAttract
